[gd_scene load_steps=6 format=2]

[ext_resource path="res://exemplar/exemplar.gd" type="Script" id=1]
[ext_resource path="res://ui/GridVSeparator.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/KaushanScript-Regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://img/error.png" type="Texture" id=4]
[ext_resource path="res://ui/organizer/Organizer.tscn" type="PackedScene" id=5]

[node name="ExemplarCharSheet" type="PanelContainer"]
margin_left = 797.0
margin_right = 1109.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExemplarCharSheet" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 798.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExemplarName" type="Label" parent="ExemplarCharSheet"]
margin_right = 791.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Exemplar Name"
align = 1

[node name="TabContainer" type="TabContainer" parent="ExemplarCharSheet"]
margin_top = 18.0
margin_right = 791.0
margin_bottom = 354.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="HBoxContainer" parent="ExemplarCharSheet/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftColumn" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Training"]
margin_right = 471.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_right = 471.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TrainingMethodSelect" type="OptionButton" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "No training possible in this location"

[node name="CountSelect" type="OptionButton" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer"]
margin_left = 260.0
margin_right = 304.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "x1"

[node name="RepeatTraining" type="CheckBox" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer"]
margin_left = 308.0
margin_right = 380.0
margin_bottom = 24.0
pressed = true
text = "Repeat"

[node name="AddToPlanButton" type="Button" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer"]
margin_left = 384.0
margin_right = 471.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Add To Plan"

[node name="HSeparator3" type="HSeparator" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_top = 28.0
margin_right = 471.0
margin_bottom = 32.0
size_flags_vertical = 0

[node name="SelectedTrainingDesc" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_top = 36.0
margin_right = 471.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Description of the training technique
Do you even lift, bro?"

[node name="HSeparator2" type="HSeparator" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_top = 71.0
margin_right = 471.0
margin_bottom = 75.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_top = 79.0
margin_right = 471.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Recent changes"
align = 1

[node name="StatsChangeHistory" type="GridContainer" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn"]
margin_top = 119.0
margin_right = 471.0
margin_bottom = 133.0
size_flags_horizontal = 3
columns = 4

[node name="Label" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/StatsChangeHistory"]
margin_right = 114.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Stat"

[node name="Label4" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/StatsChangeHistory"]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Today"
align = 1

[node name="Label2" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/StatsChangeHistory"]
margin_left = 236.0
margin_right = 350.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Since yesterday"
align = 1

[node name="Label3" type="Label" parent="ExemplarCharSheet/TabContainer/Training/LeftColumn/StatsChangeHistory"]
margin_left = 354.0
margin_right = 468.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Since last week"
align = 1

[node name="RightColumn" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Training"]
margin_left = 475.0
margin_right = 775.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="TrainingOrganizer" parent="ExemplarCharSheet/TabContainer/Training/RightColumn" instance=ExtResource( 5 )]
size_flags_horizontal = 3
allowNewFolder = false
ignoreEntryClicks = true

[node name="VSeparator" type="VSeparator" parent="ExemplarCharSheet/TabContainer/Training"]
margin_left = 779.0
margin_right = 783.0
margin_bottom = 300.0

[node name="Stats" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="PowerLevelContainer" type="HBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats"]
margin_right = 575.0
margin_bottom = 40.0

[node name="PowerLevelLabel" type="Label" parent="ExemplarCharSheet/TabContainer/Stats/PowerLevelContainer"]
margin_right = 575.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Power Level: "
align = 1
valign = 1

[node name="VBoxContainer" type="HBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats"]
margin_top = 44.0
margin_right = 575.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridVSeparator" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 55.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 0 )

[node name="StrContainer" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer"]
margin_left = 59.0
margin_right = 148.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StrLabel" type="Label" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/StrContainer"]
margin_right = 89.0
margin_bottom = 36.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 3 )
text = "Strength"
align = 1

[node name="HSeparator" type="MarginContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/StrContainer"]
margin_top = 40.0
margin_right = 89.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )

[node name="StrStats" type="GridContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/StrContainer"]
margin_top = 64.0
margin_right = 89.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="GridVSeparator5" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 152.0
margin_right = 207.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 0 )

[node name="AgiContainer" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer"]
margin_left = 211.0
margin_right = 275.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AgiLabel" type="Label" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/AgiContainer"]
margin_right = 64.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Agility"
align = 1

[node name="HSeparator2" type="MarginContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/AgiContainer"]
margin_top = 40.0
margin_right = 64.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )

[node name="AgiStats" type="GridContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/AgiContainer"]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="GridVSeparator2" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 279.0
margin_right = 334.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 0 )

[node name="MindContainer" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer"]
margin_left = 338.0
margin_right = 393.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MindLabel" type="Label" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/MindContainer"]
margin_right = 55.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Mind"
align = 1

[node name="HSeparator3" type="MarginContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/MindContainer"]
margin_top = 40.0
margin_right = 55.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )

[node name="IntStats" type="GridContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/MindContainer"]
margin_top = 64.0
margin_right = 55.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="GridVSeparator3" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 397.0
margin_right = 452.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 0 )

[node name="WillContainer" type="VBoxContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer"]
margin_left = 456.0
margin_right = 515.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WillLabel" type="Label" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/WillContainer"]
margin_right = 59.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Spirit"
align = 1

[node name="HSeparator4" type="MarginContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/WillContainer"]
margin_top = 40.0
margin_right = 59.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WillStats" type="GridContainer" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer/WillContainer"]
margin_top = 64.0
margin_right = 59.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="GridVSeparator4" parent="ExemplarCharSheet/TabContainer/Stats/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 519.0
margin_right = 575.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 0 )

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 28.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
[connection signal="item_selected" from="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer/TrainingMethodSelect" to="." method="_on_TrainingMethodSelect_item_selected"]
[connection signal="pressed" from="ExemplarCharSheet/TabContainer/Training/LeftColumn/HBoxContainer/AddToPlanButton" to="." method="_on_AddToPlanButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
